<package>
  <name>xenomai_ros</name>
  <version>0.1.0</version>
  <description>Tools for building real-time applications with Xenomai.</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbuild_xenomai</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
